# prex-challenge

./: .gitignore  Cargo.toml  Dockerfile  README.md  challenge_prex_postman_collection.json  docker-compose.yml
src/: lib.rs  main.rs  state.rs  store.rs
src/api/: client_balance.rs  error.rs  mod.rs  new_client.rs  new_credit_transaction.rs  new_debit_transaction.rs  routes.rs  store_balances.rs  validated.rs
src/api/handlers/: client.rs  transaction.rs
src/api/models/: client.rs  transaction.rs
src/store/: account_store.rs  mod.rs  store_error.rs
tests/: README.md  e2e.rs
