[package]
name = "challenge-prex"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-web-validator = "7.0.0"
anyhow = "1.0.102"
chrono = { version = "0.4.45", features = ["serde"] }
dashmap = "6.2.1"
env_logger = "0.11.10"
log = "0.4.33"
serde = { version = "1.0.228", features = ["std", "derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
uuid = { version = "1.23.3", features = [ "v4" ] }
validator = { version = "0.20.0", features = ["derive"] }
